sorted out logo not coming up on top of the page on mobile...fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@
     background-color: #508aa8;
 }
 .bg-color-contact {
-    background: url(../images/pexels-jeshoots-238118\ 2.jpg);
+    background: url(../images/pexels-jeshoots-238118.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
